--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,14 +7,23 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": "src",
     "paths": {
-      "components": ["components/*"],
-      "containers": ["containers/*"],
-      "modules": ["modules/*"],
-      "pages": ["pages/*"],
-      "core": ["core/*"],
-      "styles": ["styles/*"],
-      "assets": ["assets/*"],
-    }
+      "components/*": ["components/*"],
+      "containers/*": ["containers/*"],
+      "modules/*": ["modules/*"],
+      "pages/*": ["pages/*"],
+      "core/*": ["core/*"],
+      "styles/*": ["styles/*"],
+      "assets/*": ["assets/*"]
+    },
+    "allowJs": true,
+    "jsx": "react-jsx",
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "strict": false,
+    "newLine": "crlf",
   },
   "include": ["**/*.jsx", "**/*.js"],
   "exclude": ["node_modules"]
