--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "firebase": "^9.16.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
