--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "firebase": "^9.16.0",
+    "node-sass": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.5",
